(feat): style changes

--- a/packages/stencil-lib/src/components/inno-button/inno-button.scss
+++ b/packages/stencil-lib/src/components/inno-button/inno-button.scss
@@ -1,13 +1,4 @@
-@use '@innomotics/ix-fonts/dist/styles/index';
-
-$primary-yellow: #E1F000;
-$primary-white: #FFFFFF;
-$primary-black: #08191F;
-$yellow-active: #D2E100;
-$blue-focus: #1491EB;
-$gray-active: #53676F;
-$gray-disabled: #9AACB4;
-$gray-light: #E4EAED;
+@use '../../../styles/innomotics';
 
 :host {
   display: block;
@@ -26,7 +17,7 @@ $gray-light: #E4EAED;
     margin-bottom: 12px;
     margin-left: 16px;
     border: none;
-    color: $primary-black;
+    color: innomotics.$primary-black;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -37,183 +28,183 @@ $gray-light: #E4EAED;
 
     &.cta {
       &.light-bgc:not(.disabled):not(:disabled) {
-        background-color: $primary-yellow;
-        border-bottom: 2px solid $primary-black;
+        background-color: innomotics.$primary-yellow;
+        border-bottom: 2px solid innomotics.$primary-black;
 
         &:hover,
         &:focus {
-          box-shadow: 0px -7px $primary-black inset;
+          box-shadow: 0px -7px innomotics.$primary-black inset;
           transition: box-shadow 200ms ease 0s;
 
           &:active {
-            box-shadow: 0px -7px $gray-active inset;
+            box-shadow: 0px -7px innomotics.$gray-active inset;
             transition: none;
-            border-bottom: 2px solid $gray-active;
+            border-bottom: 2px solid innomotics.$gray-active;
           }
         }
 
         &:active {
-          box-shadow: 0px -7px $gray-active inset;
+          box-shadow: 0px -7px innomotics.$gray-active inset;
           transition: none;
-          border-bottom: 2px solid $gray-active;
+          border-bottom: 2px solid innomotics.$gray-active;
         }
       }
 
       &.dark-bgc:not(.disabled):not(:disabled) {
-        background-color: $primary-yellow;
+        background-color: innomotics.$primary-yellow;
 
         &:active {
-          box-shadow: 0px -7px $primary-white inset;
+          box-shadow: 0px -7px innomotics.$primary-white inset;
         }
       }
 
       &.light-highlight-bgc:not(.disabled):not(:disabled) {
-        color: $primary-white;
-        background-color: $primary-black;
+        color: innomotics.$primary-white;
+        background-color: innomotics.$primary-black;
 
         &:active {
-          color: $primary-white;
-          background-color: $gray-active;
-          box-shadow: 0px -7px $primary-white inset;
+          color: innomotics.$primary-white;
+          background-color: innomotics.$gray-active;
+          box-shadow: 0px -7px innomotics.$primary-white inset;
         }
       }
 
       &:hover:not(.disabled):not(:disabled),
       &:focus:not(.disabled):not(:disabled) {
-        box-shadow: 0px -7px $primary-white inset;
+        box-shadow: 0px -7px innomotics.$primary-white inset;
         transition: box-shadow 200ms ease 0s;
       }
 
       &:active:not(.disabled):not(:disabled) {
-        color: $primary-black;
-        background-color: $yellow-active;
+        color: innomotics.$primary-black;
+        background-color: innomotics.$yellow-active;
       }
 
       &:disabled,
       &.disabled {
-        color: $gray-active;
-        background-color: $gray-disabled;
+        color: innomotics.$gray-active;
+        background-color: innomotics.$gray-disabled;
         pointer-events: none;
       }
     }
 
     &.primary {
       &.light-bgc:not(.disabled):not(:disabled) {
-        color: $primary-white;
-        background-color: $primary-black;
+        color: innomotics.$primary-white;
+        background-color: innomotics.$primary-black;
 
         &:hover,
         &:focus {
-          box-shadow: 0px -7px $primary-yellow inset;
+          box-shadow: 0px -7px innomotics.$primary-yellow inset;
           transition: box-shadow 200ms ease 0s;
 
           &:active {
-            box-shadow: 0px -7px $yellow-active inset;
+            box-shadow: 0px -7px innomotics.$yellow-active inset;
           }
         }
 
         &:active {
-          box-shadow: 0px -7px $yellow-active inset;
+          box-shadow: 0px -7px innomotics.$yellow-active inset;
         }
       }
 
       &.dark-bgc:not(.disabled):not(:disabled) {
-        background-color: $primary-white;
+        background-color: innomotics.$primary-white;
 
         &:hover,
         &:focus {
-          box-shadow: 0px -7px $primary-yellow inset;
+          box-shadow: 0px -7px innomotics.$primary-yellow inset;
           transition: box-shadow 200ms ease 0s;
 
           &:active {
-            background-color: $primary-white;
-            box-shadow: 0px -7px $yellow-active inset;
+            background-color: innomotics.$primary-white;
+            box-shadow: 0px -7px innomotics.$yellow-active inset;
           }
         }
 
         &:active {
-          background-color: $primary-white;
-          box-shadow: 0px -7px $yellow-active inset;
+          background-color: innomotics.$primary-white;
+          box-shadow: 0px -7px innomotics.$yellow-active inset;
         }
       }
 
       &.light-highlight-bgc:not(.disabled):not(:disabled) {
-        color: $primary-white;
-        background-color: $primary-black;
+        color: innomotics.$primary-white;
+        background-color: innomotics.$primary-black;
 
         &:active {
-          box-shadow: 0px -7px $primary-white inset;
+          box-shadow: 0px -7px innomotics.$primary-white inset;
         }
       }
 
       &:hover:not(.disabled):not(:disabled),
       &:focus:not(.disabled):not(:disabled) {
-        box-shadow: 0px -7px $primary-white inset;
+        box-shadow: 0px -7px innomotics.$primary-white inset;
         transition: box-shadow 200ms ease 0s;
       }
 
       &:active:not(.disabled):not(:disabled) {
-        background-color: $gray-active;
+        background-color: innomotics.$gray-active;
         transition: none;
       }
 
       &:disabled,
       &.disabled {
-        color: $gray-active;
-        background-color: $gray-disabled;
+        color: innomotics.$gray-active;
+        background-color: innomotics.$gray-disabled;
         pointer-events: none;
       }
     }
 
     &.secondary {
-      border: 1px solid $primary-black;
-      border-bottom: 2px solid $primary-black;
+      border: 1px solid innomotics.$primary-black;
+      border-bottom: 2px solid innomotics.$primary-black;
       background-color: transparent;
 
       &.dark-bgc:not(.disabled):not(:disabled) {
-        color: $primary-white;
-        border: 1px solid $primary-white;
-        border-bottom: 2px solid $primary-white;
+        color: innomotics.$primary-white;
+        border: 1px solid innomotics.$primary-white;
+        border-bottom: 2px solid innomotics.$primary-white;
 
         &:hover,
         &:focus {
-          box-shadow: 0px -7px $primary-white inset;
+          box-shadow: 0px -7px innomotics.$primary-white inset;
           transition: box-shadow 200ms ease 0s;
 
           &:active {
-            box-shadow: 0px -7px $primary-white inset;
+            box-shadow: 0px -7px innomotics.$primary-white inset;
           }
         }
 
         &:active {
-          color: $primary-white;
-          border: 1px solid $primary-white;
-          border-bottom: 2px solid $primary-white;
-          box-shadow: 0px -7px $primary-white inset !important;
+          color: innomotics.$primary-white;
+          border: 1px solid innomotics.$primary-white;
+          border-bottom: 2px solid innomotics.$primary-white;
+          box-shadow: 0px -7px innomotics.$primary-white inset !important;
         }
       }
 
       &:hover:not(.disabled):not(:disabled),
       &:focus:not(.disabled):not(:disabled) {
-        box-shadow: 0px -7px $primary-black inset;
+        box-shadow: 0px -7px innomotics.$primary-black inset;
         transition: box-shadow 200ms ease 0s;
 
         &:active:not(.disabled):not(:disabled) {
-          box-shadow: 0px -7px $gray-active inset;
+          box-shadow: 0px -7px innomotics.$gray-active inset;
         }
       }
 
       &:active:not(.disabled):not(:disabled) {
-        border: 1px solid $gray-active;
-        border-bottom: 2px solid $gray-active;
-        color: $gray-active;
-        box-shadow: 0px -7px $gray-active inset;
+        border: 1px solid innomotics.$gray-active;
+        border-bottom: 2px solid innomotics.$gray-active;
+        color: innomotics.$gray-active;
+        box-shadow: 0px -7px innomotics.$gray-active inset;
       }
 
       &:disabled,
       &.disabled {
-        color: $gray-disabled;
-        border: 1px solid $gray-disabled;
+        color: innomotics.$gray-disabled;
+        border: 1px solid innomotics.$gray-disabled;
         background-color: transparent;
         pointer-events: none;
       }
@@ -222,58 +213,58 @@ $gray-light: #E4EAED;
     &.tertiary {
       padding-left: 5px;
       padding-right: 5px;
-      border-bottom: 2px solid $primary-black;
+      border-bottom: 2px solid innomotics.$primary-black;
       background-color: transparent;
       margin-left: 32px;
 
       &.dark-bgc:not(.disabled):not(:disabled) {
-        color: $primary-white;
-        border-bottom: 2px solid $primary-white;
+        color: innomotics.$primary-white;
+        border-bottom: 2px solid innomotics.$primary-white;
 
         &:hover,
         &:focus {
-          box-shadow: 0px -7px $primary-white inset;
+          box-shadow: 0px -7px innomotics.$primary-white inset;
           transition: box-shadow 200ms ease 0s;
 
           &:active {
-            box-shadow: 0px -7px $primary-white inset;
+            box-shadow: 0px -7px innomotics.$primary-white inset;
           }
         }
 
         &:active {
-          color: $primary-white;
-          border-bottom: 2px solid $primary-white;
-          box-shadow: 0px -7px $primary-white inset;
+          color: innomotics.$primary-white;
+          border-bottom: 2px solid innomotics.$primary-white;
+          box-shadow: 0px -7px innomotics.$primary-white inset;
         }
       }
 
       &:hover:not(.disabled):not(:disabled),
       &:focus:not(.disabled):not(:disabled) {
-        box-shadow: 0px -7px $primary-black inset;
+        box-shadow: 0px -7px innomotics.$primary-black inset;
         transition: box-shadow 200ms ease 0s;
 
         &:active {
-          box-shadow: 0px -7px $gray-active inset;
+          box-shadow: 0px -7px innomotics.$gray-active inset;
         }
       }
 
       &:active:not(.disabled):not(:disabled) {
-        color: $gray-active;
-        border-bottom: 2px solid $gray-active;
-        box-shadow: 0px -7px $gray-active inset;
+        color: innomotics.$gray-active;
+        border-bottom: 2px solid innomotics.$gray-active;
+        box-shadow: 0px -7px innomotics.$gray-active inset;
       }
 
       &:disabled,
       &.disabled {
-        color: $gray-disabled;
-        border-bottom: 1px solid $gray-disabled;
+        color: innomotics.$gray-disabled;
+        border-bottom: 1px solid innomotics.$gray-disabled;
         background-color: transparent;
         pointer-events: none;
       }
     }
 
     &:focus:not(.disabled):not(:disabled) {
-      outline: $blue-focus;
+      outline: innomotics.$blue-focus;
       outline-style: solid;
       outline-width: 2px;
       outline-offset: 2px;
@@ -286,16 +277,16 @@ $gray-light: #E4EAED;
       max-width: 80px;
       border-radius: 50%;
       padding: 0;
-      background-color: $primary-white;
+      background-color: innomotics.$primary-white;
       box-shadow: 0px 4px 20px 0px #00000033;
 
       &:hover:not(.disabled):not(:disabled) {
-        background-color: $primary-yellow;
+        background-color: innomotics.$primary-yellow;
       }
 
       &:active:not(.disabled):not(:disabled),
       &:focus:not(.disabled):not(:disabled) {
-        background-color: $gray-light;
+        background-color: innomotics.$gray-light;
       }
 
       &:focus:not(.disabled):not(:disabled) {
@@ -304,8 +295,8 @@ $gray-light: #E4EAED;
 
       &:disabled, &.disabled {
         pointer-events: none;
-        background-color: $gray-disabled;
-        color: $gray-active;
+        background-color: innomotics.$gray-disabled;
+        color: innomotics.$gray-active;
       }
     }
 
@@ -315,22 +306,22 @@ $gray-light: #E4EAED;
       min-width: 32px;
       max-width: 32px;
       padding: 0;
-      background-color: $primary-white;
+      background-color: innomotics.$primary-white;
       box-shadow: 0px 4px 20px 0px #00000033;
 
       &:hover:not(.disabled):not(:disabled) {
-        background-color: $primary-yellow;
+        background-color: innomotics.$primary-yellow;
       }
 
       &:active:not(.disabled):not(:disabled),
       &:focus:not(.disabled):not(:disabled) {
-        background-color: $gray-light;
+        background-color: innomotics.$gray-light;
       }
 
       &:disabled, &.disabled {
         pointer-events: none;
-        background-color: $gray-disabled;
-        color: $gray-active;
+        background-color: innomotics.$gray-disabled;
+        color: innomotics.$gray-active;
       }
     }
   }
