--- a/packages/webdocs/src/css/custom.scss
+++ b/packages/webdocs/src/css/custom.scss
@@ -1,4 +1,5 @@
-@import url("../../../stencil-lib/src/styles/themes/innomotics-light/index.scss");
+@use 'sass:list';
+@import url("@innomotics/ix-fonts/dist/styles/innomoticsHaffer.css");
 /**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
@@ -29,4 +30,3 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
-
