--- a/packages/test-applications/react-test-app/src/index.css
+++ b/packages/test-applications/react-test-app/src/index.css
@@ -1,6 +1,7 @@
 
 
 @import url("@innomotics/ix-fonts/dist/styles/innomoticsHaffer.css");
+@import url("@innomotics/ix-icons/dist/styles/innomoticsIcons.css");
 
 :root {
   font-family: 'InnomoticsHafferSQ-Light';
