--- a/packages/stencil-lib/styles/innomotics.scss
+++ b/packages/stencil-lib/styles/innomotics.scss
@@ -1,2 +1,3 @@
 @use '@innomotics/ix-fonts/dist/styles/innomoticsHaffer';
+@use '@innomotics/ix-icons/dist/styles/innomoticsIcons';
 @forward './colors';
