--- a/packages/stencil-lib/styles/_colors.scss
+++ b/packages/stencil-lib/styles/_colors.scss
@@ -3,6 +3,12 @@ $primary-white: #ffffff;
 $primary-black: #08191f;
 $yellow-active: #d2e100;
 $blue-focus: #1491eb;
-$gray-active: #53676f;
-$gray-disabled: #9aacb4;
-$gray-light: #e4eaed;
+$gray-50: #E4EAED;
+$gray-200: #CAD5DA;
+$gray-300: #B2C1C7;
+$gray-400: #9AACB4;
+$gray-500: #83979F;
+$gray-600: #6D818A;
+$gray-700: #566B73;
+$gray-800: #40545B;
+$gray-900: #2A3B40;
