breadcrumb style alignment

--- a/packages/stencil-lib/src/components/inno-breadcrumb-item/inno-breadcrumb-item.scss
+++ b/packages/stencil-lib/src/components/inno-breadcrumb-item/inno-breadcrumb-item.scss
@@ -18,8 +18,11 @@
   max-width: 15rem;
   min-width: 0;
 
-  li {
+  li{
     display: contents;
+    a{
+      display: contents;
+    }
   }
 
   .chevron {
