--- a/packages/stencil-lib/src/components/inno-button/inno-button.scss
+++ b/packages/stencil-lib/src/components/inno-button/inno-button.scss
@@ -6,6 +6,7 @@
   &.disabled,
   &:disabled {
     pointer-events: none;
+    cursor: default;
   }
 
   button {
@@ -17,7 +18,6 @@
     padding-right: 24px;
     font-weight: bold;
     margin-bottom: 12px;
-    margin-left: 16px;
     border: none;
     color: innomotics.$primary-black;
     display: flex;
@@ -27,7 +27,7 @@
     gap: 8px;
     font-size: 16px;
     font-family: 'InnomoticsHafferSQ-Bold';
-    box-sizing: border-box; 
+    cursor: pointer;
 
     &.primary {
       &.light-bgc {
@@ -56,7 +56,7 @@
         color: innomotics.$primary-black;
         background-color: innomotics.$primary-yellow;
 
-        &:hover:not(.disabled):not(:disabled)  {
+        &:hover:not(.disabled):not(:disabled) {
           background-color: innomotics.$gray-300;
         }
 
@@ -121,7 +121,10 @@
       padding: 0;
       border-bottom: 5px solid innomotics.$primary-black;
       background-color: transparent;
-      margin-left: 32px;
+
+      &.icon-only {
+        border: none !important;
+      }
 
       &.light-bgc {
         &:hover:not(.disabled):not(:disabled) {
@@ -213,6 +216,12 @@
         pointer-events: none;
         color: innomotics.$gray-400;
       }
+    }
+
+    &.icon-only {
+      padding: 0;
+      min-width: 48px;
+      max-width: 48px;
     }
   }
 }
