Icon position refactor.

--- a/packages/stencil-lib/src/components/inno-button/inno-button.scss
+++ b/packages/stencil-lib/src/components/inno-button/inno-button.scss
@@ -29,6 +29,10 @@
     font-family: 'InnomoticsHafferSQ-Bold';
     cursor: pointer;
 
+    &.display-reverse {
+      flex-direction: row-reverse;
+    }
+
     &.primary {
       &.light-bgc {
         color: innomotics.$primary-yellow;
