styling states of input

--- a/packages/stencil-lib/src/components/inno-input/inno-input.scss
+++ b/packages/stencil-lib/src/components/inno-input/inno-input.scss
@@ -2,25 +2,51 @@
 
 :host {
   .input-container {
-    height:56px;
-    padding:0px 16px 0px 16px;
+    height: 56px;
+    padding: 0px 16px 0px 16px;
     margin: 2px;
     border: 1px solid colors.$primary-black;
-    &:hover {
-      border: 2px solid colors.$primary-black;
-      margin: 1px;
+    &.light {
+      background-color: colors.$primary-white;
+      color: colors.$primary-black;
+      &:hover &.isactive {
+        border: 2px solid colors.$primary-black;
+        margin: 1px;
+      }
     }
-    &.focused{
+
+    &.focused {
       outline: colors.$blue-focus;
       outline-style: solid;
       outline-width: 2px;
       outline-offset: 2px;
+      &.dark{
+        border: 2px solid colors.$primary-yellow;
+        margin: 1px;
+      }
     }
+    &.dark {
+      background-color: colors.$primary-black;
+      color: colors.$primary-white;
+      &.isactive {
+        border: 2px solid colors.$primary-yellow;
+        margin: 1px;
+      }
+    }
+
     input {
       width: 100%;
       border: none;
       outline: none;
-      margin-top:calc(56px - 30px);
+      margin-top: calc(56px - 30px);
+      &.ligth {
+        background-color: colors.$primary-white;
+        color: colors.$primary-black;
+      }
+      &.dark {
+        background-color: colors.$primary-black;
+        color: colors.$primary-white;
+      }
     }
 
     .label {
@@ -29,7 +55,6 @@
       z-index: 1;
       pointer-events: none;
       transition: 0.2s ease all;
-      color: colors.$primary-black;
       transform: translate(0rem, 1.2rem) scale(1);
       position: absolute;
     }
